ensure rounded corners when header-accordion is collapsed

--- a/express/code/blocks/faqv2/faqv2.css
+++ b/express/code/blocks/faqv2/faqv2.css
@@ -82,7 +82,6 @@
 
 .faqv2-accordion.expandable.header-accordion.rounded-corners,
 .faqv2-accordion.expandable.header-accordion {
-	border-radius: 8px 8px 0 0;
 	margin-bottom: 0;
 	background: linear-gradient(to bottom,
 			#5C5CE0,
